--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <!-- HEADER -->
+  <!-- HERO -->
   <header class="hero">
     <h1>Navya Deena Rojin</h1>
     <p>
@@ -29,9 +29,10 @@
     <section>
       <h2><i class="fa-solid fa-user"></i> About</h2>
       <p>
-        I am a B.Tech Electronics and Communication Engineering undergraduate with a strong
-        interest in embedded systems and biomedical electronics. I focus on designing
-        reliable, manufacturable hardware systems for assistive technology applications.
+        I am a B.Tech Electronics and Communication Engineering undergraduate with
+        a strong interest in embedded systems and biomedical electronics. I focus
+        on designing reliable, manufacturable hardware systems for assistive and
+        healthcare technology applications.
       </p>
     </section>
 
@@ -42,7 +43,7 @@
         <li><i class="fa-solid fa-code"></i> Embedded C, C, basic Python</li>
         <li><i class="fa-solid fa-bolt"></i> Microcontrollers: Arduino, ESP32, STM32</li>
         <li><i class="fa-solid fa-wave-square"></i> Embedded systems & sensor interfacing</li>
-        <li><i class="fa-solid fa-layer-group"></i> PCB design: EasyEDA, KiCad, Cadence (basic)</li>
+        <li><i class="fa-solid fa-layer-group"></i> PCB design: EasyEDA, KiCad, Cadence</li>
         <li><i class="fa-solid fa-chart-line"></i> Simulation tools: Vivado</li>
         <li><i class="fa-solid fa-cube"></i> 3D enclosure design: Autodesk Fusion</li>
       </ul>
@@ -68,8 +69,8 @@
           <h3><i class="fa-solid fa-bolt"></i> Functional Electrical Stimulator (FES) <span>Ongoing</span></h3>
           <ul>
             <li>Low-cost functional electrical stimulation device</li>
-            <li>Safe and adjustable stimulation waveforms</li>
-            <li>Hardware reliability for therapeutic use</li>
+            <li>Adjustable and safe stimulation waveforms</li>
+            <li>Designed with biomedical safety in mind</li>
           </ul>
         </div>
 
@@ -77,8 +78,8 @@
           <h3><i class="fa-solid fa-person-walking"></i> Gait Phase Detection System</h3>
           <ul>
             <li>Sensor-based gait analysis using motion data</li>
-            <li>Identification of distinct gait phases</li>
-            <li>Designed for closed-loop rehab systems</li>
+            <li>Detection of distinct gait phases</li>
+            <li>Designed for closed-loop rehabilitation systems</li>
           </ul>
         </div>
 
@@ -86,17 +87,16 @@
           <h3><i class="fa-solid fa-hand"></i> TremoSense – Wrist Tremor Monitoring</h3>
           <ul>
             <li>Wrist-worn tremor monitoring system</li>
-            <li>Captures tremor frequency and amplitude</li>
-            <li>Clinical and home monitoring</li>
-            <li>To help improve medication efficacy</li>
+            <li>Quantifies tremor frequency and amplitude</li>
+            <li>Clinical and home-based monitoring</li>
           </ul>
         </div>
 
         <div class="project-card">
           <h3><i class="fa-solid fa-droplet"></i> IV Drip Monitoring System</h3>
           <ul>
-            <li>Non-invasive IV fluid monitoring via optical sensing</li>
-            <li>Real-time alerts and display with Arduino Nano</li>
+            <li>Non-invasive IV fluid monitoring system</li>
+            <li>Real-time alerts using Arduino Nano</li>
             <li>Custom 3D-printed medical enclosure</li>
           </ul>
         </div>
@@ -104,9 +104,8 @@
         <div class="project-card">
           <h3><i class="fa-solid fa-hands-bubbles"></i> Non-Contact Scrub Dispensing System</h3>
           <ul>
-            <li>Touch-free dispensing using IR sensing</li>
-            <li>Designed for hospital hygiene systems</li>
-            <li>Cost-efficient alternative to existing solutions</li>
+            <li>Touch-free scrub dispensing using IR sensing</li>
+            <li>Designed for hospital hygiene environments</li>
             <li>Power-efficient actuator control</li>
           </ul>
         </div>
@@ -116,7 +115,7 @@
           <ul>
             <li>200 g competitive antweight robot</li>
             <li>Mechanical strength and maneuverability optimized</li>
-            <li>Parametric CAD for rapid iteration</li>
+            <li>Parametric CAD-based rapid iteration</li>
           </ul>
         </div>
 
@@ -126,6 +125,7 @@
     <!-- CONTACT -->
     <section>
       <h2><i class="fa-solid fa-envelope"></i> Contact</h2>
+
       <p><i class="fa-solid fa-envelope"></i> navya.rojin@gmail.com</p>
       <p>
         <i class="fa-brands fa-linkedin"></i>
@@ -141,5 +141,7 @@
     <p>© 2025 Navya Deena Rojin</p>
   </footer>
 
+  <!-- JavaScript -->
+  <script src="script.js"></script>
 </body>
 </html>
