--- a/index.html
+++ b/index.html
@@ -56,53 +56,53 @@
       <div class="projects-container">
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-microchip"></i> Custom ESP32 Development Board <span>Ongoing</span></h3>
+          <h3>Custom ESP32 Development Board <span>Ongoing</span></h3>
           <ul>
             <li>Custom ESP32 board for rapid prototyping</li>
             <li>Integrated power, programming, and GPIO expansion</li>
             <li>On-board IMU, SD card, and battery charger</li>
-            <li>EMI-aware PCB routing and DFM considerations</li>
+            <li>EMI-aware PCB routing and manufacturability</li>
           </ul>
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-bolt"></i> Functional Electrical Stimulator (FES) <span>Ongoing</span></h3>
+          <h3>Functional Electrical Stimulator (FES) <span>Ongoing</span></h3>
           <ul>
             <li>Low-cost functional electrical stimulation device</li>
-            <li>Adjustable and safe stimulation waveforms</li>
-            <li>Designed with biomedical safety in mind</li>
+            <li>Safe and adjustable stimulation waveforms</li>
+            <li>Biomedical safety-focused hardware design</li>
           </ul>
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-person-walking"></i> Gait Phase Detection System</h3>
+          <h3>Gait Phase Detection System</h3>
           <ul>
             <li>Sensor-based gait analysis using motion data</li>
             <li>Detection of distinct gait phases</li>
-            <li>Designed for closed-loop rehabilitation systems</li>
+            <li>Closed-loop rehabilitation integration</li>
           </ul>
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-hand"></i> TremoSense – Wrist Tremor Monitoring</h3>
+          <h3>TremoSense – Wrist Tremor Monitoring</h3>
           <ul>
             <li>Wrist-worn tremor monitoring system</li>
-            <li>Quantifies tremor frequency and amplitude</li>
-            <li>Clinical and home-based monitoring</li>
+            <li>Captures tremor frequency and amplitude</li>
+            <li>Continuous clinical and home monitoring</li>
           </ul>
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-droplet"></i> IV Drip Monitoring System</h3>
+          <h3>IV Drip Monitoring System</h3>
           <ul>
-            <li>Non-invasive IV fluid monitoring system</li>
+            <li>Non-invasive IV fluid monitoring</li>
             <li>Real-time alerts using Arduino Nano</li>
-            <li>Custom 3D-printed medical enclosure</li>
+            <li>3D-printed clinical enclosure</li>
           </ul>
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-hands-bubbles"></i> Non-Contact Scrub Dispensing System</h3>
+          <h3>Non-Contact Scrub Dispensing System</h3>
           <ul>
             <li>Touch-free scrub dispensing using IR sensing</li>
             <li>Designed for hospital hygiene environments</li>
@@ -111,10 +111,10 @@
         </div>
 
         <div class="project-card">
-          <h3><i class="fa-solid fa-robot"></i> Antweight Combat Robot</h3>
+          <h3>Antweight Combat Robot</h3>
           <ul>
             <li>200 g competitive antweight robot</li>
-            <li>Mechanical strength and maneuverability optimized</li>
+            <li>Optimized for strength and maneuverability</li>
             <li>Parametric CAD-based rapid iteration</li>
           </ul>
         </div>
@@ -125,7 +125,6 @@
     <!-- CONTACT -->
     <section>
       <h2><i class="fa-solid fa-envelope"></i> Contact</h2>
-
       <p><i class="fa-solid fa-envelope"></i> navya.rojin@gmail.com</p>
       <p>
         <i class="fa-brands fa-linkedin"></i>
@@ -141,7 +140,6 @@
     <p>© 2025 Navya Deena Rojin</p>
   </footer>
 
-  <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
