--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Navya Deena Rojin</h1>
     <p>
       Electronics & Communication Engineering<br>
-      Embedded Systems • PCB Design • Biomedical Electronics
+      Embedded Systems • PCB Design
     </p>
   </header>
 
@@ -61,7 +61,6 @@
             <li>Custom ESP32 board for rapid prototyping</li>
             <li>Integrated power, programming, and GPIO expansion</li>
             <li>On-board IMU, SD card, and battery charger</li>
-            <li>EMI-aware PCB routing and manufacturability</li>
           </ul>
         </div>
 
@@ -113,7 +112,7 @@
         <div class="project-card">
           <h3>Antweight Combat Robot</h3>
           <ul>
-            <li>200 g competitive antweight robot</li>
+            <li>200g competitive antweight robot</li>
             <li>Optimized for strength and maneuverability</li>
             <li>Parametric CAD-based rapid iteration</li>
           </ul>
@@ -143,3 +142,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
