--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
 
       <div class="projects-container">
 
-        <div class="project-card">
-          <h3>Custom ESP32 Development Board <span>Ongoing</span></h3>
-          <ul>
-            <li>Custom ESP32 board for rapid prototyping</li>
-            <li>Integrated power, programming, and GPIO expansion</li>
-            <li>On-board IMU, SD card, and battery charger</li>
-          </ul>
-        </div>
+       <div class="project-card">
+  <h3>Custom ESP32 Dev Board</h3>
+  <p>
+    Battery-powered ESP32-S3 development board with USB-C, IMU, RTC, and SD card.
+  </p>
+  <a href="projects/custom-esp32-devboard.html" class="btn">
+    View Project
+  </a>
+</div>
 
         <div class="project-card">
           <h3>Functional Electrical Stimulator (FES) <span>Ongoing</span></h3>
@@ -142,4 +143,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
