--- a/projects/ESP32_DEVBoard/custom-esp32-devboard.html
+++ b/projects/ESP32_DEVBoard/custom-esp32-devboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Custom ESP32 Dev Board</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
 </head>
 
 <body>
