--- a/projects/ESP32_DEVBoard/custom-esp32-devboard.html
+++ b/projects/ESP32_DEVBoard/custom-esp32-devboard.html
@@ -80,7 +80,7 @@
       <h2>Schematic</h2>
       <iframe
         class="viewer"
-        src="../../assets/esp32-devboard/ESP32-Board-Schematic.pdf"
+        src="../../assets/esp32-devboard/ESP32 Board Schem.pdf"
         title="ESP32 Dev Board Schematic">
       </iframe>
     </section>
