--- a/projects/ESP32_DEVBoard/custom-esp32-devboard.html
+++ b/projects/ESP32_DEVBoard/custom-esp32-devboard.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Custom ESP32 Dev Board</title>
 
-  <!-- ROOT CSS (important: 2 levels up) -->
+  <!-- Root CSS (2 levels up) -->
   <link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
 
-  <!-- HERO (reuses your dark banner style) -->
+  <!-- HERO -->
   <section class="hero">
     <h1>Custom ESP32-S3 Development Board</h1>
     <p>
@@ -49,7 +49,7 @@
           <h4>Power Management</h4>
           <p>
             USB power + Li-ion battery charging using LTC4054 with LDO-regulated
-            3.3 V output.
+            3.3&nbsp;V output.
           </p>
         </div>
 
@@ -80,7 +80,7 @@
       <h2>Schematic</h2>
       <iframe
         class="viewer"
-        src="../../assets/esp32-devboard/ESP32 Board Schem.pdf"
+        src="../../assets/esp32-devboard/ESP32%20Board%20Schem.pdf"
         title="ESP32 Dev Board Schematic">
       </iframe>
     </section>
@@ -88,19 +88,23 @@
     <!-- PCB -->
     <section class="project-section">
       <h2>PCB Layout</h2>
-      <img
-        class="image-view"
-        src="../../assets/esp32-devboard/pcb-layout.png"
-        alt="ESP32 Dev Board PCB Layout">
+      <a href="../../assets/esp32-devboard/pcb-layout.png" target="_blank">
+        <img
+          class="image-view"
+          src="../../assets/esp32-devboard/pcb-layout.png"
+          alt="ESP32 Dev Board PCB Layout">
+      </a>
     </section>
 
     <!-- 3D VIEW -->
     <section class="project-section">
       <h2>3D Board View</h2>
-      <img
-        class="image-view"
-        src="../../assets/esp32-devboard/board-3d.png"
-        alt="ESP32 Dev Board 3D View">
+      <a href="../../assets/esp32-devboard/board-3d.png" target="_blank">
+        <img
+          class="image-view"
+          src="../../assets/esp32-devboard/board-3d.png"
+          alt="ESP32 Dev Board 3D View">
+      </a>
     </section>
 
     <!-- APPLICATIONS -->
