--- a/projects/TremoSense/tremosense.html
+++ b/projects/TremoSense/tremosense.html
@@ -41,6 +41,17 @@
       </p>
     </section>
 
+  <section class="project-section">
+  <h2>Abstract</h2>
+  <p>
+    TremoSense is a wearable, embedded system designed to quantify hand tremors
+    by extracting frequency and amplitude features from wrist motion data.
+    The project targets healthcare applications, specifically evaluating
+    Parkinson’s disease medication efficacy through objective tremor metrics.
+  </p>
+</section>
+
+
     <!-- KEY FEATURES -->
     <section class="project-section">
       <h2>Key Features</h2>
