--- a/index.html
+++ b/index.html
@@ -1,149 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Navya Deena Rojin | Aspiring Embedded Systems Engineer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Navya Deena Rojin</title>
 
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <!-- HERO -->
-  <header class="hero">
+  <section class="hero">
     <h1>Navya Deena Rojin</h1>
     <p>
-      Electronics & Communication Engineering<br>
-      Embedded Systems • PCB Design
+      Electronics & Communication Engineering Undergraduate <br>
+      Embedded Systems • PCB Design • Healthcare Electronics
     </p>
-  </header>
+  </section>
 
   <main>
 
     <!-- ABOUT -->
     <section>
-      <h2><i class="fa-solid fa-user"></i> About</h2>
+      <h2>About Me</h2>
       <p>
-        I am a B.Tech Electronics and Communication Engineering undergraduate with
-        a strong interest in embedded systems and biomedical electronics. I focus
-        on designing reliable, manufacturable hardware systems for assistive and
-        healthcare technology applications.
+        I am an Electronics and Communication Engineering undergraduate with a
+        strong interest in embedded systems, PCB design, and healthcare-focused
+        electronics. I enjoy building complete systems — from schematics to
+        firmware — with a focus on real-world impact.
       </p>
-    </section>
-
-    <!-- SKILLS -->
-    <section>
-      <h2><i class="fa-solid fa-microchip"></i> Technical Skills</h2>
-      <ul class="skills">
-        <li><i class="fa-solid fa-code"></i> Embedded C, C, basic Python</li>
-        <li><i class="fa-solid fa-bolt"></i> Microcontrollers: Arduino, ESP32, STM32</li>
-        <li><i class="fa-solid fa-wave-square"></i> Embedded systems & sensor interfacing</li>
-        <li><i class="fa-solid fa-layer-group"></i> PCB design: EasyEDA, KiCad, Cadence</li>
-        <li><i class="fa-solid fa-chart-line"></i> Simulation tools: Vivado</li>
-        <li><i class="fa-solid fa-cube"></i> 3D enclosure design: Autodesk Fusion</li>
-      </ul>
     </section>
 
     <!-- PROJECTS -->
     <section>
-      <h2><i class="fa-solid fa-diagram-project"></i> Projects</h2>
+      <h2>Projects</h2>
 
       <div class="projects-container">
 
-       <div class="project-card">
-  <h3>Custom ESP32 Dev Board</h3>
-  <p>
-    Battery-powered ESP32-S3 development board with USB-C, IMU, RTC, and SD card.
-  </p>
-  <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="btn">
-    View Project
-  </a>
-</div>
-
+        <!-- ESP32 DEV BOARD -->
         <div class="project-card">
-          <h3>Functional Electrical Stimulator (FES) <span>Ongoing</span></h3>
+          <h3>Custom ESP32-S3 Development Board</h3>
+
           <ul>
-            <li>Low-cost functional electrical stimulation device</li>
-            <li>Safe and adjustable stimulation waveforms</li>
-            <li>Biomedical safety-focused hardware design</li>
+            <li>Battery-powered ESP32-S3 board with USB-C</li>
+            <li>IMU, RTC, and micro-SD integration</li>
+            <li>Custom schematic & PCB design</li>
           </ul>
+
+          <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html">
+            View project →
+          </a>
         </div>
 
+        <!-- TREMOSENSE -->
         <div class="project-card">
-          <h3>Gait Phase Detection System</h3>
-          <ul>
-            <li>Sensor-based gait analysis using motion data</li>
-            <li>Detection of distinct gait phases</li>
-            <li>Closed-loop rehabilitation integration</li>
-          </ul>
-        </div>
+          <h3>TremoSense</h3>
 
-        <div class="project-card">
-          <h3>TremoSense – Wrist Tremor Monitoring</h3>
           <ul>
-            <li>Wrist-worn tremor monitoring system</li>
-            <li>Captures tremor frequency and amplitude</li>
-            <li>Continuous clinical and home monitoring</li>
+            <li>Wearable tremor measurement device</li>
+            <li>Captures tremor frequency & amplitude</li>
+            <li>Healthcare application for Parkinson’s monitoring</li>
           </ul>
-        </div>
 
-        <div class="project-card">
-          <h3>IV Drip Monitoring System</h3>
-          <ul>
-            <li>Non-invasive IV fluid monitoring</li>
-            <li>Real-time alerts using Arduino Nano</li>
-            <li>3D-printed clinical enclosure</li>
-          </ul>
-        </div>
-
-        <div class="project-card">
-          <h3>Non-Contact Scrub Dispensing System</h3>
-          <ul>
-            <li>Touch-free scrub dispensing using IR sensing</li>
-            <li>Designed for hospital hygiene environments</li>
-            <li>Power-efficient actuator control</li>
-          </ul>
-        </div>
-
-        <div class="project-card">
-          <h3>Antweight Combat Robot</h3>
-          <ul>
-            <li>200g competitive antweight robot</li>
-            <li>Optimized for strength and maneuverability</li>
-            <li>Parametric CAD-based rapid iteration</li>
-          </ul>
+          <a href="projects/TremoSense/tremosense.html">
+            View project →
+          </a>
         </div>
 
       </div>
     </section>
 
-    <!-- CONTACT -->
+    <!-- SKILLS -->
     <section>
-      <h2><i class="fa-solid fa-envelope"></i> Contact</h2>
-      <p><i class="fa-solid fa-envelope"></i> navya.rojin@gmail.com</p>
-      <p>
-        <i class="fa-brands fa-linkedin"></i>
-        <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank">
-          LinkedIn Profile
-        </a>
-      </p>
+      <h2>Skills</h2>
+
+      <ul class="skills">
+        <li>Embedded C / Microcontrollers</li>
+        <li>ESP32 / Arduino Platforms</li>
+        <li>Schematic & PCB Design (EasyEDA)</li>
+        <li>Healthcare Electronics</li>
+        <li>Fusion 360 (3D Enclosures)</li>
+      </ul>
     </section>
 
   </main>
 
   <footer>
-    <p>© 2025 Navya Deena Rojin</p>
+    <p>© Navya Deena Rojin</p>
   </footer>
 
-  <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
