--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navya Deena Rojin – Embedded & Healthcare Electronics</title>
+  <title>Navya Deena Rojin – Embedded Systems Engineering</title>
+
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
@@ -11,117 +12,166 @@
 
   <!-- NAVBAR -->
   <header class="site-header">
-    <div class="nav-inner">
+    <div class="nav-inner container">
       <div class="logo">Navya<span>.</span></div>
       <nav class="nav-links">
+        <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#education">Education</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main id="home">
 
     <!-- HERO -->
-    <section class="hero" id="home">
-      <div class="hero-content">
-        <p class="eyebrow">Electronics & Communication • Embedded Systems</p>
-        <h1>
-          I design & build<br>
-          <span class="accent">embedded hardware</span><br>
-          for healthcare & IoT.
-        </h1>
-        <p class="hero-text">
-          From schematics and PCB layout to firmware and enclosures,
-          I enjoy turning complex problems into reliable, human-centered devices.
+    <section class="hero-section container">
+      <div class="hero-text-block">
+        <p class="hero-tag">Embedded Systems • MERN Stack</p>
+        <h1>Hi, I'm Navya Deena Rojin</h1>
+        <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
+        <p class="hero-desc">
+          I design and build electronics from custom
+          ESP32 boards and sensor systems.
         </p>
 
         <div class="hero-actions">
-          <a href="#projects" class="btn-primary">View my work</a>
-          <a href="#contact" class="btn-ghost">Get in touch</a>
+          <a href="#projects" class="btn-primary">View my projects</a>
+          <a href="#contact" class="btn-outline">Let’s collaborate</a>
         </div>
       </div>
 
-      <!-- Split panels inspired by designer / coder -->
-      <div class="hero-panels">
-        <div class="hero-panel hardware">
-          <h2>hardware</h2>
-          <p>Custom PCBs, power, sensors, connectors, and 3D-printed enclosures.</p>
+      <div class="hero-pill-grid">
+        <div class="pill-card">
+          <h3>Embedded Hardware</h3>
+          <p>Custom PCBs, ESP32, IMUs, RTCs, power and 3D-printed enclosures.</p>
         </div>
-        <div class="hero-panel firmware">
-          <h2>&lt; firmware /&gt;</h2>
-          <p>Embedded C, ESP32, real-time data, and healthcare-focused logic.</p>
+        <div class="pill-card">
+          <h3>&lt; Firmware /&gt;</h3>
+          <p>Embedded C, sensor fusion, data logging, and real-time systems.</p>
         </div>
       </div>
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="section-card">
-      <h2>About</h2>
-      <div class="about-grid">
+    <section id="about" class="section container">
+      <h2 class="section-title">About Me</h2>
+      <div class="about-layout">
         <p>
-          I’m Navya Deena Rojin, an Electronics and Communication Engineering
-          undergraduate specialising in embedded systems and PCB design.
-          I love building end-to-end systems that combine sensors, connectivity,
-          and thoughtful hardware design — especially for healthcare and
-          assistive technologies.
+          I’m an Electronics & Communication Engineering undergraduate focused on
+          embedded systems, PCB design, and healthcare electronics. I enjoy taking
+          ideas from a rough sketch to working prototypes – schematics, layout,
+          firmware, and mechanical design.
         </p>
-        <div>
-          <h3>Core skills</h3>
-          <ul class="skills-list">
+      </div>
+    </section>
+
+    <!-- WHAT I DO -->
+    <section class="section container">
+      <h2 class="section-title">What I Do</h2>
+      <div class="cards-3">
+        <div class="info-card">
+          <h3>Embedded Systems</h3>
+          <p>
+            Designing microcontroller-based systems, working with ESP32, sensors,
+            communication interfaces, and real-time data acquisition.
+          </p>
+        </div>
+        <div class="info-card">
+          <h3>PCB Design</h3>
+          <p>
+            Creating schematics and PCB layouts (EasyEDA, KiCAD and Cadence), with attention to power,
+            routing, and manufacturability – including custom dev boards.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="skills" class="section container">
+      <h2 class="section-title">Skills</h2>
+
+      <div class="skills-grid">
+        <div class="skills-group">
+          <h3>Embedded & Hardware</h3>
+          <ul>
             <li>ESP32 / Arduino / microcontrollers</li>
-            <li>Schematic design & PCB layout (EasyEDA)</li>
-            <li>Embedded C & basic firmware architecture</li>
-            <li>Healthcare & wearable electronics</li>
+            <li>Schematic design & PCB layout (EasyEDA, KiCAD, Cadence)</li>
+            <li>Sensors, IMUs (MPU6050), RTC (DS3231)</li>
+            <li>Battery charging & power management</li>
             <li>3D enclosure design (Fusion 360)</li>
+          </ul>
+        </div>
+
+        <div class="skills-group">
+          <h3>General</h3>
+          <ul>
+            <li>Embedded C programming</li>
+            <li>Version control (Git & GitHub)</li>
+            <li>Problem solving & debugging</li>
+            <li>Documentation & schematics annotation</li>
           </ul>
         </div>
       </div>
     </section>
 
+    <!-- EDUCATION -->
+    <section id="education" class="section container">
+      <h2 class="section-title">Education</h2>
+
+      <div class="timeline">
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <h3>B.Tech in Electronics & Communication Engineering</h3>
+            <p class="timeline-meta">Undergraduate • India</p>
+            <p>
+              Focusing on embedded systems, communication, and hardware design
+              with projects in healthcare and IoT devices.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- PROJECTS -->
-    <section id="projects" class="section-card">
-      <h2>Selected work</h2>
+    <section id="projects" class="section container">
+      <h2 class="section-title">Projects</h2>
 
       <div class="projects-grid">
 
-        <!-- ESP32 Dev Board -->
         <article class="project-card">
-          <div class="project-header">
-            <h3>Custom ESP32-S3 Development Board</h3>
-            <span class="project-tag">Embedded • PCB • IoT</span>
-          </div>
-          <p class="project-summary">
-            A custom ESP32-S3 dev board with USB-C, Li-ion charging, IMU,
-            RTC, and micro-SD, designed for prototyping healthcare and
-            data-logging applications.
+          <h3>Custom ESP32-S3 Development Board</h3>
+          <p class="project-meta">Embedded • PCB • IoT</p>
+          <p class="project-desc">
+            Custom ESP32-S3 dev board with USB-C, Li-ion charging, IMU, RTC,
+            and micro-SD card – designed for prototyping healthcare and
+            data-logging systems.
           </p>
-          <ul class="project-bullets">
-            <li>On-board power management and battery charging</li>
-            <li>Integrated IMU (MPU6050) and DS3231 RTC</li>
-            <li>Micro-SD storage and accessible headers for expansion</li>
+          <ul class="project-list">
+            <li>LTC4054-based battery charging & 3.3&nbsp;V regulation</li>
+            <li>Integrated MPU6050 IMU and DS3231 RTC</li>
+            <li>Micro-SD storage and accessible expansion headers</li>
           </ul>
           <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="project-link">
             View project →
           </a>
         </article>
 
-        <!-- TremoSense -->
         <article class="project-card">
-          <div class="project-header">
-            <h3>TremoSense</h3>
-            <span class="project-tag">Healthcare • Wearable</span>
-          </div>
-          <p class="project-summary">
-            A wrist-worn system to capture tremor frequency and amplitude,
-            aimed at analysing Parkinson’s medication efficacy using
-            objective motion data.
+          <h3>TremoSense</h3>
+          <p class="project-meta">Healthcare • Wearable</p>
+          <p class="project-desc">
+            Wrist-worn system that measures tremor frequency and amplitude to
+            help analyse Parkinson’s medication efficacy through motion data.
           </p>
-          <ul class="project-bullets">
+          <ul class="project-list">
             <li>High-sensitivity IMU-based tremor measurement</li>
             <li>Feature extraction for tremor frequency & amplitude</li>
-            <li>Wearable-friendly PCB and hardware architecture</li>
+            <li>Wearable-oriented PCB & embedded design</li>
           </ul>
           <a href="projects/TremoSense/tremosense.html" class="project-link">
             View project →
@@ -132,23 +182,29 @@
     </section>
 
     <!-- CONTACT -->
-    <section id="contact" class="section-card">
-      <h2>Contact</h2>
-      <p>
-        Interested in embedded / healthcare electronics, internships, or collaborations?
-        I’d love to connect.
+    <section id="contact" class="section container">
+      <h2 class="section-title">Get In Touch</h2>
+      <p class="contact-text">
+        Have an idea around embedded systems, healthcare electronics, or a MERN
+        stack project? I’d love to talk.
       </p>
-      <div class="contact-links">
-        <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">Email me</a>
-        <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer">GitHub</a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noreferrer">LinkedIn</a>
+      <div class="contact-actions">
+        <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
+          Email me
+        </a>
+        <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer">
+          GitHub
+        </a>
+        <a href="https://www.linkedin.com" target="_blank" rel="noreferrer">
+          LinkedIn
+        </a>
       </div>
     </section>
 
   </main>
 
-  <footer class="site-footer">
-    <p>© <span id="year"></span> Navya Deena Rojin • Built with HTML, CSS & a lot of debugging.</p>
+  <footer class="footer">
+    <p>© <span id="year"></span> Navya Deena Rojin • Embedded Engineer.</p>
   </footer>
 
 </body>
