--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
     <section id="contact" class="section container">
       <h2 class="section-title">Get In Touch</h2>
       <p class="contact-text">
-        Have an idea around embedded systems, healthcare electronics, or a MERN
-        stack project? I’d love to talk.
+        Have an idea around embedded systems or healthcare electronics project? I’d love to talk.
       </p>
       <div class="contact-actions">
         <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
@@ -209,3 +208,4 @@
 
 </body>
 </html>
+
